
- work in progress:
	pack() unpack() (Java) by Bas Appelo

	module-level compilation for perlito5.pl (Perl5)

	utf8 support (Java)

	BEGIN blocks (parser)

	tie() and overload

	XS replacement modules

- Parser:
-- fix chomp(), chop()
-- fix fat-arrow in argument lists
-- fix indirect object
-- indented heredoc with <<~"tag"
-- use $^H and %^H
-- set Perl version to 5.026
-- add core modules:
	DirHandle, File::Spec, Text::Abbrev, Text::ParseWords
	Getopt::Std, Getopt::Long
	Tie::Hash, Tie::Scalar, Tie::Array, warnings::register,
	Fcntl, Symbol, Term::ANSIColor,
	IO, IO::Handle, IO::Seekable, IO::File,
    integer, if, parent, subs
-- syntax fixes for hash vs. block, and ${var->{index}}
-- CORE:: prefix (CORE::print, CORE::tr)
-- CORE::GLOBAL special namespace
-- CORE functions can be overridden
-- stacked operators in "-X" file test
-- remove "." from @INC
-- decode source code "magic number" for UTF-8, UTF-16LE, UTF-16BE
-- "hexfloat" literals
-- new operators '|.', '|.=', '&.', '&.=', '^.', '^.=', '~.'

- Java:
-- fix $^O, returns the the operating system name
-- "require", "require VERSION"
-- "opendir", "readdir", "closedir", "select", "binmode"
-- "vec"
-- tied hash
-- tied array
-- overload implemented for about half of the operators
-- strict refs
-- srand() returns true, warns on overflow
-- fix read-only values
-- $\
-- caller() now works "natively", decoding the Java stack trace
-- symbol tables like %:: and typeglobs support
-- '-e' file test
-- lvalue ternary "?:" and "vec"
-- regex modifier /xx
-- regex %+ named captures
-- regex named captures can have underscore in the name
-- SUPER method call
-- add core modules:
	Cwd, Sys::Hostname

9.022 cpan:Perlito5  2017-05-xx
- Parser:
-- Implemented compile-time scratchpad, used in BEGIN blocks.
-- "Use" is no longer an AST node, because all "use" statements
	are executed at compile-time
- JavaScript:
-- fix "range" special cases
-- regex /s /x modifiers
-- variable redeclaration